src/test/ui/parser/keyword-typeof.stderr
error: expected identifier, found reserved keyword `typeof`
  --> $DIR/keyword-typeof.rs:2:9
   |
LL |     let typeof = ();
   |         ^^^^^^ expected identifier, found reserved keyword
   |
help: you can escape reserved keywords to use them as identifiers
   |
LL |     let r#typeof = ();
   |         ^^^^^^^^

error: aborting due to previous error

